--- a/01-ES6补充/01-ES6补充.md
+++ b/01-ES6补充/01-ES6补充.md
@@ -202,3 +202,183 @@ const obj = {
 }
 ```
 
+## 1.4	箭头函数
+
+### 1.4.1	认识箭头函数
+
+> 传统定义函数的方式
+
+```javascript
+  const aaa = function (param) {
+      
+  }
+```
+
+> 对象字面量中定义函数
+
+```javascript
+const obj = {
+    bbb (param) {  },
+}
+```
+
+> ES6中的箭头函数
+
+```javascript
+//const ccc = (参数列表) => {}
+  const ccc = () => {}
+```
+
+### 1.4.2	箭头函数的参数和返回值
+
+#### 1.4.2.1	参数问题
+
+> 1.放入两个参数
+
+```javascript
+const sum = (num1,num2) => {
+    return num1 + num2 
+}
+```
+
+> 2.放入一个参数,()可以省略
+
+```javascript
+const power = num => {
+  return num * num
+}
+```
+
+#### 1.4.2.2	函数内部
+
+> 1.函数中代码块中有多行代码
+
+```javascript
+const test = () =>{
+  console.log("hello zzz")
+  console.log("hello vue")
+}
+```
+
+> 2.函数代码块中只有一行代码，可以省略return
+
+```javascript
+// const mul = (num1,num2) => {
+//   return num1 * num2
+// }
+const mul = (num1,num2) => num1* num2
+// const log = () => {
+//   console.log("log")
+// }
+const log = () => console.log("log")
+```
+
+### 1.4.3	箭头函数的this使用
+
+> 什么时候使用箭头函数
+
+```javascript
+setTimeout(function () {
+	console.log(this)
+} , 1000);
+setTimeout(() => {
+	console.log(this)//这里this找的是window的this
+}, 1000);
+```
+
+> 结论：箭头函数没有this，这里this引用的是最近作用域（aaa函数里的this）的this。
+
+```javascript
+    const obj = {
+      aaa(){
+        setTimeout(function () {
+          console.log(this)//window
+         });
+         setTimeout(() => {
+          console.log(this)//obj
+        });
+      }
+    }
+    obj.aaa()
+```
+
+> ​	上述中第一个是window对象的this，第二个箭头函数的this是obj的。
+
+```javascript
+    const obj = {
+      aaa() {
+        setTimeout(function () {
+          setTimeout(function () {
+            console.log(this) //window
+          })
+          setTimeout(() => {
+            console.log(this) //window
+          })
+        })
+        setTimeout(() => {
+          setTimeout(function () {
+            console.log(this) //window
+          })
+          setTimeout(() => {
+            console.log(this) //obj
+          })
+        })
+      }
+    }
+    obj.aaa()
+```
+
+## 高阶函数
+
+### 1.5.1	filter过滤函数
+
+```javascript
+const nums = [2,3,5,1,77,55,100,200]
+//要求获取nums中大于50的数
+//回调函数会遍历nums中每一个数，传入回调函数，在回调函数中写判断逻辑，返回true则会被数组接收，false会被拒绝
+let newNums = nums.filter(function (num) {
+  if(num > 50){
+    return true;
+  }
+  return false;
+ })
+ //可以使用箭头函数简写
+//  let newNums = nums.filter(num => num >50)
+```
+
+### 1.5.2	map高阶函数
+
+```javascript
+// 要求将已经过滤的新数组每项乘以2
+//map函数同样会遍历数组每一项，传入回调函数为参数，num是map遍历的每一项，回调函数function返回值会被添加到新数组中
+let newNums2 = newNums.map(function (num) {
+  return num * 2
+ })
+ //简写
+//  let newNums2 = newNums.map(num => num * 2)
+console.log(newNums2);
+```
+
+### 1.5.3	reduce高阶函数
+
+```javascript
+// 3.reduce高阶函数
+//要求将newNums2的数组所有数累加
+//reduce函数同样会遍历数组每一项，传入回调函数和‘0’为参数，0表示回调函数中preValue初始值为0，回调函数中参数preValue是每一次回调函数function返回的值，currentValue是当前值
+//例如数组为[154, 110, 200, 400],则回调函数第一次返回值为0+154=154，第二次preValue为154，返回值为154+110=264，以此类推直到遍历完成
+let newNum = newNums2.reduce(function (preValue,currentValue) {
+  return preValue + currentValue
+ },0)
+//简写
+// let newNum = newNums2.reduce((preValue,currentValue) => preValue + currentValue)
+console.log(newNum);
+```
+
+### 1.5.4综合使用
+
+```javascript
+//三个需求综合
+let n = nums.filter(num => num > 50).map(num => num * 2).reduce((preValue,currentValue) => preValue + currentValue)
+console.log(n);
+```
+
