--- a/08-遍历循环/08-遍历循环.md
+++ b/08-遍历循环/08-遍历循环.md
@@ -53,11 +53,11 @@
     <!-- 1.遍历过程没有使用index索引-->
     <!-- 格式为：key-value -->
     <ul>
-      <li v-for="(item,key) in user" >{{key+"-"+item}}</li>
+      <li v-for="(value,key) in user" >{{key+"-"+value}}</li>
     </ul>
     <!-- 格式为：key-value-index -->
     <ul>
-      <li v-for="(item,key,index) in user" >{{key+"-"+item+"-"+index}}</li>
+      <li v-for="(value,key,index) in user" >{{key+"-"+value+"-"+index}}</li>
     </ul>
 
   </div>
@@ -78,7 +78,7 @@
 </html>
 ```
 
-1. 遍历过程没有使用index索引，`<li v-for="(item,key) in user" >{{key+"-"+item}}</li>`，item表示当前元素是属性值，key表示user对象属性名。
+1. 遍历过程没有使用index索引，`<li v-for="(value,key) in user" >{{key+"-"+value}}</li>`，value表示当前元素是属性值，key表示user对象属性名。
 2. 遍历过程使用index索引，index表示索引从0开始。
 3. ![](./images/8.2-1.png)
 
