09-综合练习.md 修改remove到最后一个有问题

--- a/09-综合练习/09-综合练习.md
+++ b/09-综合练习/09-综合练习.md
@@ -114,7 +114,7 @@ const app = new Vue({
         //     return preValue + currentValue
         //   })
         // 3.高阶函数简写（箭头函数）
-        return this.books.map(book => book.price * book.count).reduce((preValue,currentVlue) => preValue + currentVlue)
+        return this.books.length === 0 ? 0 : this.books.map(book => book.price * book.count).reduce((preValue,currentVlue) => preValue + currentVlue)
       }
   },
   methods: {
