--- a/06-事件监听/06-事件监听.md
+++ b/06-事件监听/06-事件监听.md
@@ -135,7 +135,7 @@
         divClick(){
           console.log("点击div");
         },
-        submitClcik(){
+        submitClick(){
           console.log("提交被阻止了")
         },
         keyup(){
